# isca

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
data/: corpus.txt
src/: eval.py  train.py
src/isca/: __init__.py  eval.py  train.py
src/isca/data/: __init__.py  text_dataset.py
src/isca/eval/: __init__.py  main.py
src/isca/eval/analysis/: __init__.py  basic.py  graph.py  operators.py  role.py  symbolic.py
src/isca/eval/benchmarks/: __init__.py  mmlu_eval.py  mmlu_pro_eval.py  real_bench_eval.py
src/isca/eval/visualizations/: __init__.py  plots.py
src/isca/examples/: __init__.py  hf_example.py  mmlu_eval.py  mmlu_pro_eval.py  real_bench_eval.py
src/isca/models/: __init__.py  attractor_symbol.py  identity_tracker.py  isca.py  isca_hf.py  operator_flow.py
src/isca/utils/: __init__.py  convert_checkpoint.py  graph_utils.py  isca_hf.py  sched.py  viz.py
tests/: test_gpt2_mps.py  test_pytorch_mps.py
